完善种草系统

--- a/修仙复刻/game-design-docs/项目总览.md
+++ b/修仙复刻/game-design-docs/项目总览.md
@@ -10,14 +10,64 @@ game-design-docs/
 ├── 03-reincarnation-system.md         # 轮回转世系统
 ├── 04-enlightenment-retreat.md        # 悟道闭关系统
 ├── 05-commercialization-plan.md       # 商业化总方案
-└── 06-exponential-boost-items.md      # 指数加成道具设计
+├── 06-exponential-boost-items.md      # 指数加成道具设计
+└── 07-spirit-garden-system.md         # 百草灵园系统（种田融合）
 ```
 
 ---
 
-## 🎮 四大系统概览
+## 🔗 系统关联图
 
-### 1. 灵兽羁绊系统 ☯️
+```
+                        ┌──────────────┐
+                        │   百草灵园    │
+                        │   🌿 产出    │
+                        └──────┬───────┘
+                               │
+        ┌──────────────────────┼──────────────────────┐
+        │                      │                      │
+        ↓                      ↓                      ↓
+   ┌─────────┐          ┌──────────┐          ┌──────────┐
+   │  灵石   │          │ 法则真意  │          │ 境界辅助  │
+   │ (经济)  │          │ (主资源)  │          │ (加成)   │
+   └────┬────┘          └────┬─────┘          └────┬─────┘
+        │                    │                    │
+        ↓                    ↓                    ↓
+   ┌─────────┐          ┌──────────┐          ┌──────────┐
+   │土地解锁 │    →    │ 法则修炼  │    →    │ 境界突破  │
+   │种子购买 │          │ 通天塔   │          │ 属性提升  │
+   └─────────┘          └──────────┘          └──────────┘
+                               ↑
+                               │
+                        ┌──────┴───────┐
+                        │   轮回转世    │
+                        │   🌀 重置    │
+                        │ 保留/加速    │
+                        └──────────────┘
+```
+
+---
+
+## 🎮 五大系统概览
+
+### 1. 百草灵园系统 🌿
+**定位**：贯穿全程的基础放置系统  
+**核心价值**：
+- 融合种田玩法与修仙主题
+- 提供稳定的被动资源产出
+- 与法则/境界系统形成资源循环
+
+**关键机制**：
+- 16块土地种植灵植
+- 10转×7种=70种作物
+- 傀儡托管自动化
+- 灵植经验→法则真意转换
+
+**商业化**：土地扩展包、傀儡高级托管、灵植变异液
+
+---
+
+### 2. 灵兽羁绊系统 ☯️
 **定位**：中期收集养成系统  
 **核心价值**：
 - 提供策略性build搭配空间
@@ -34,7 +84,7 @@ game-design-docs/
 
 ---
 
-### 2. 宗门争霸系统 🏛️
+### 3. 宗门争霸系统 🏛️
 **定位**：社交驱动的异步竞争系统  
 **核心价值**：
 - 建立玩家社交连接
@@ -51,7 +101,7 @@ game-design-docs/
 
 ---
 
-### 3. 轮回转世系统 🌀
+### 4. 轮回转世系统 🌀
 **定位**：终局prestige/meta系统  
 **核心价值**：
 - 解决指数游戏软上限问题
@@ -76,7 +126,7 @@ game-design-docs/
 
 ---
 
-### 4. 悟道闭关系统 🧘
+### 5. 悟道闭关系统 🧘
 **定位**：贯穿全程的基础放置系统  
 **核心价值**：
 - 强化"放置修仙"主题
@@ -186,11 +236,14 @@ game-design-docs/
 - ✅ 法则悟道（法则修炼+通天塔）
 - ✅ 副本探险（血色副本+秘宝阁）
 - ✅ 境界突破
+- ✅ 百草灵园（种田系统融合）
 
 商业化：
 - ✅ 基础月卡
 - ✅ 复活令、背包扩展
 - ✅ 限时礼包
+- ✅ 土地扩展包
+- ✅ 傀儡托管
 
 ---
 
